linux-mt/tools/perf-target-aarch64_cortex-a53_musl/feature/test-reallocarray.make.output
test-reallocarray.c: In function 'main':
test-reallocarray.c:7:11: error: implicit declaration of function 'reallocarray'; did you mean 'realloc'? [-Werror=implicit-function-declaration]
  return !!reallocarray(NULL, 1, 1);
           ^~~~~~~~~~~~
           realloc
cc1: all warnings being treated as errors
